Fix Invalid Date

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,13 +44,13 @@
             <div class="field">
                 <label class="label">Number of Trucks</label>
                 <div class="control">
-                    <input class="input" type="integer" id="noOfTrucksInput" placeholder="Enter number of trucks">
+                    <input class="input" type="number" id="noOfTrucksInput" placeholder="Enter number of trucks">
                 </div>
             </div>
             <div class="field">
                 <label class="label">Weight</label>
                 <div class="control">
-                    <input class="input" type="integer" id="weightInput" placeholder="Enter weight">
+                    <input class="input" type="number" id="weightInput" placeholder="Enter weight">
                 </div>
             </div>
             <div class="field">
