Refactor Code | Fix Bugs in Update and Add Load

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -135,13 +135,13 @@
                 <div class="field">
                     <label class="label">Number of Trucks</label>
                     <div class="control">
-                        <input class="input" type="integer" id="editNoOfTrucksInput" placeholder="Enter number of trucks">
+                        <input class="input" type="number" id="editNoOfTrucksInput" placeholder="Enter number of trucks">
                     </div>
                 </div>
                 <div class="field">
                     <label class="label">Weight</label>
                     <div class="control">
-                        <input class="input" type="integer" id="editWeightInput" placeholder="Enter weight">
+                        <input class="input" type="number" id="editWeightInput" placeholder="Enter weight">
                     </div>
                 </div>
                 <div class="field">
